# patches

./: .gitignore  .gitmodules  README.md  build.py  mkdocs.yml  pyproject.toml
docs/: api.md  examples.md  index.md  install.md  other_tools.md  relocs.md  requirements.txt
liblink/: Makefile
patches/: __init__.py  binary_info.py  binary_manager.py  error.py  log.py  patcher.py  patches.py  types.py
patches/shellvm/: wrapper.py
patches/test/: fixtures.py  test_axssl.py  test_binary_info.py  test_patches.py  test_shellvm.py
patches/test/binaries/: axssl
patches/test/binaries/AIS-Lite/: AIS-Lite
patches/util/: cs_memop_eq.py
pypatches/: __init__.py  address_range.py  binary_manager.py  dynamic_info.py  error.py  log.py  patcher.py  patches.py  strategies.py  types.py  write_operation.py
pypatches/code/: __init__.py  asm.py  c_code.py  code.py  raw.py
pypatches/transform/: info.py
pypatches/util/: cs_memop_eq.py
pypatches/util/libs/: libgetbase.c  libgetreg.c  liblink.c  libs.py  libsyscall.c  libutil.c
test/: test_axssl.py  test_binary_info.py  test_patch_ais_lite.py  test_patches.py  test_squishy.py  test_symbol_resolve.py
test/binaries/: Makefile  axssl.patched  print_twice.c
test/binaries/AIS-Lite/: AIS-Lite
test/binaries/AIS-Lite/seeds/: GEN_00000_00000.raw  GEN_00000_00001.raw  GEN_00000_00003.raw  GEN_00000_00004.raw  GEN_00000_00005.raw  GEN_00000_00006.raw  GEN_00000_00007.raw  GEN_00000_00008.raw  GEN_00000_00009.raw  GEN_00000_00010.raw  GEN_00000_00011.raw  GEN_00000_00012.raw  GEN_00000_00013.raw  GEN_00000_00014.raw  GEN_00000_00015.raw  GEN_00000_00016.raw  GEN_00000_00017.raw  GEN_00000_00018.raw  GEN_00000_00019.raw
